# Projeto-Escultor-3D

./: .gitignore  CMakeLists.txt  Voxel.h  main.cpp  sculptor.cpp  sculptor.h
